@@ -9,6 +9,10 @@ javafx {
     modules = [ 'javafx.controls', 'javafx.fxml' ]
 }
 
+run {
+    jvmArgs = ['--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED']
+}
+
 repositories {
     mavenCentral()
 }
@@ -16,6 +20,7 @@ repositories {
 dependencies {
     implementation 'junit:junit:4.13.1'
     implementation 'org.json:json:20220924'
+    implementation 'org.controlsfx:controlsfx:11.1.2'
     testImplementation('org.junit.jupiter:junit-jupiter:5.6.0')
 }
 
